tests/ui/associated-type.rs
#[typetag::serde]
pub trait Trait {
    type Assoc;
}

fn main() {}
